re PR target/21656 (Spurious "template with C linkage" error message)

PR target/21656
	* config/mips/elf.h (NO_IMPLICIT_EXTERN_C): Define.

From-SVN: r101818